# recursive_cli_search

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/recursive_cli_search/: cli.py
tests/: cli_test.py  dummy_test.py
